Tue Oct 26 12:55:49 1999  Gonzalo A. Diethelm  <Gonzalo.Diethelm@jda.cl>

	* source/rdd/dbcmd.c: 
	* source/rdd/dbf1.c: 
	* source/rdd/dbfcdx/dbfcdx1.c: 
	Added HB_TRACE() calls to the RDD library.

Tue Oct 26 12:15:01 1999  Gonzalo A. Diethelm  <Gonzalo.Diethelm@jda.cl>

	* source/vm/cmdarg.c: 
	* source/vm/debug.c: 
	* source/vm/dynsym.c: 
	* source/vm/hvm.c: 
	* source/vm/initsymb.c: 
	* source/vm/mainstd.c: 
	* source/vm/mainwin.c: 
	Added HB_TRACE() calls to the VM.

19991026-14:07 GMT+1 Victor Szel <info@szelvesz.hu>
  * include/itemapi.h
    source/rtl/itemapi.c
    source/rtl/strings.c
    source/rtl/console.c
    + hb_itemString() made thread safe, while keeping the speed of previous
      non-thread safe version for most cases.
  * source/rtl/dates.c
    + NOTE added about the buffer size requirements of hb_dtoc()
  * source/vm/hvm.c
    + HB_TRACE() call added to the HB_P_LINE opcode.
  * source/rtl/strings.c
    ! hb_strncpyUpper() and hb_itemPadConv() HB_TRACE() calls now print the 
      address of a buffer instead of the (uninitialized) content.
  * source/rtl/memvars.c
    ! bScope is now showed as a number instead of a char in HB_TRACE() call.

19991026-12:49 GMT+1 Bruno Cantero <bruno@issnet.net>
  * source/rdd/dbf1.c
    tests/testdbf.prg
    * __dbZap() function finished. Test added for this function.

19991026-11:35 GMT+1 Victor Szel <info@szelvesz.hu>
  * source/tget.prg
    % New() will evaluate the setget only once instead of three times.
    ! New() fixed the picture generation for numeric values, decimals are 
      detected for example.
    ! ::ColorSpec now defaults to the proper color.
    + ColorDisp() inline method added.
    ! Display() changed back to hide cursor while displaying
    ! Display() fixed to use ::ColorSpec instead of SetColor()
    ! Display() is now selecting the proper colors from the ::ColorSpec
    ! Display() color now depends on ::HasFocus
    ! SetFocus(), KillFocus() fixed to call ::Display(), like in Clipper.